--- a/pages/about.html
+++ b/pages/about.html
@@ -9,8 +9,8 @@ permalink: /about/
     <div class="column is-half is-offset-one-quarter">
         <div class="content">
 
-            <figure class="image is-96x96 is-centered">
-                <img class="is-rounded" src="http://via.placeholder.com/128x128">
+	    <figure>
+                <img class="is-rounded" src="/img/me.jpg">
             </figure>
             
             <hr>
