--- a/pages/about.html
+++ b/pages/about.html
@@ -9,9 +9,9 @@ permalink: /about/
     <div class="column is-half is-offset-one-quarter">
         <div class="content">
 
-	    <figure>
-                <img class="is-rounded" src="/img/me.jpg">
-            </figure>
+	    <iframe width="650" height="450"
+        src="https://embed.windy.com/embed2.html?lat=48.473&lon=-124.706&detailLat=48.236&detailLon=-124.069&width=650&height=450&zoom=7&level=surface&overlay=swell1&product=ecmwfWaves&menu=&message=true&marker=true&calendar=now&pressure=&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1"
+        frameborder="0"></iframe>
             
             <hr>
 
