--- a/pages/about.html
+++ b/pages/about.html
@@ -15,9 +15,9 @@ permalink: /about/
             
             <hr>
 
-            {% for paragraph in site.data.about.paragraphs %}
-            <p>{{paragraph}}</p>
-            {% endfor %}
+            <iframe width="650" height="450"
+        src="https://embed.windy.com/embed2.html?lat=48.466&lon=-124.618&detailLat=48.236&detailLon=-124.069&width=650&height=450&zoom=7&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=true&calendar=now&pressure=&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1"
+        frameborder="0"></iframe>
             
         </div>
     </div>
